# storage/api-docs/api-docs.json
@@ -273,36 +273,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/components/schemas/User"
-                                            }
-                                        },
-                                        "links": {
-                                            "type": "object",
-                                            "example": {
-                                                "first": "http://site.com/api/user/friends?page=1",
-                                                "last": "http://site.com/api/user/friends?page=1",
-                                                "next": null,
-                                                "prev": null
-                                            }
-                                        },
-                                        "meta": {
-                                            "type": "object",
-                                            "example": {
-                                                "current_page": 1,
-                                                "from": 1,
-                                                "last_page": 1,
-                                                "path": "http://site.com/api/user/friends",
-                                                "per_page": 10,
-                                                "to": 2,
-                                                "total": 2
-                                            }
-                                        }
-                                    },
-                                    "type": "object"
+                                    "$ref": "#/components/schemas/UserCollection"
                                 }
                             }
                         }
@@ -334,6 +305,41 @@
     },
     "components": {
         "schemas": {
+            "UserCollection": {
+                "properties": {
+                    "data": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/User"
+                        }
+                    },
+                    "links": {
+                        "type": "object",
+                        "example": {
+                            "first": "first page link",
+                            "last": "last page link",
+                            "next": "next page link",
+                            "prev": "prev page link"
+                        }
+                    },
+                    "meta": {
+                        "type": "object",
+                        "example": {
+                            "current_page": 1,
+                            "from": 1,
+                            "last_page": 1,
+                            "path": "full url path",
+                            "per_page": 10,
+                            "to": 2,
+                            "total": 2
+                        }
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "UserCollection"
+                }
+            },
             "User": {
                 "properties": {
                     "id": {
